# Akira-CP

./: CMakeLists.txt  testt.cpp
2D Arrays Practice Exercises/: 1.cpp
BFS/: Implement.cpp
Backtracking/: 1.cpp  2.cpp
Contest PTIT/Contest 1/: 1.cpp  8.cpp
DFS/: Implement.cpp
DP/: XauDoiXungDaiNhat.cpp  input.inp
Digit DP/: SumOfAll.cpp
NTU Coder/: TONGMANG.cpp
Number theory/001/: 2.cpp  3.cpp  4.cpp
Number theory/002/: 2.cpp  4.cpp
Online_Judge/Duyên hải và ĐBBB lần thứ XII/: C.cpp
Online_Judge/Gia_Dinh_OJ/: chope_daynhiphan.cpp  hsg9_matma.cpp  hsg9_tbc.cpp
Online_Judge/Le_Hong_Phong_OJ/: ts2_rapphim.cpp
Online_Judge/Le_Quy_Don_OJ/: BOOK.cpp  COMSTR.cpp
Online_Judge/Le_Quy_Don_OJ/TS10 LQD DA NANG/: BONUOC.cpp  SOANHEM.cpp
Online_Judge/TS10_2023-2024/TPHCM/: giaohang.cpp  luythua.cpp
PTIT/Contest 1/: 9.cpp
Set and Map/: 1.cpp  6.cpp
Sliding Window/: A.cpp
Test/: a.cpp  sol.cpp
Test/.cph/: .a.cpp_5da2db01fef9de9c17181eea1312be69.prob
Training (Beginner)/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp
